--- a/src/TestingCRUD.API/appsettings.json
+++ b/src/TestingCRUD.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlServerConnectionString": "Server=localhost;Port=5432;Database=FiescProject;tem que mudar"
+  },
   "AllowedHosts": "*"
 }
