--- a/src/TestingCRUD.API/TestingCRUD.API.csproj
+++ b/src/TestingCRUD.API/TestingCRUD.API.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TestingCRUD.Aplication\TestingCRUD.Aplication.csproj" />
-    <ProjectReference Include="..\TestingCRUD.Domain\TestingCRUD.Domain.csproj" />
+    <!--<ProjectReference Include="..\TestingCRUD.Domain\TestingCRUD.Domain.csproj" />-->
     <ProjectReference Include="..\TestingCRUD.Infra\TestingCRUD.Infra.csproj" />
   </ItemGroup>
 
