--- a/src/TestingCRUD.Infra/TestingCRUD.Infra.csproj
+++ b/src/TestingCRUD.Infra/TestingCRUD.Infra.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\TestingCRUD.Domain\TestingCRUD.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="QueryHandlers\OrdemQueryHandlers\" />
+  </ItemGroup>
+
 </Project>
