--- a/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
+++ b/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Handlers\ProductHandlers\Class1.csActivateProductCommandHandler" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
