feat: Iniciado a criação de alguns commands e handlers

--- a/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
+++ b/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="InputModels\CustomerInputModels\**" />
+    <Compile Remove="InputModels\ProductInputModels\**" />
+    <EmbeddedResource Remove="InputModels\CustomerInputModels\**" />
+    <EmbeddedResource Remove="InputModels\ProductInputModels\**" />
+    <None Remove="InputModels\CustomerInputModels\**" />
+    <None Remove="InputModels\ProductInputModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Handlers\ProductHandlers\Class1.csActivateProductCommandHandler" />
   </ItemGroup>
 
