--- a/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
+++ b/src/TestingCRUD.Aplication/TestingCRUD.Application.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
