--- a/Tests/TestingCRUD.Test/SalesManagement.Test.csproj
+++ b/Tests/TestingCRUD.Test/SalesManagement.Test.csproj
@@ -7,6 +7,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+	<RootNamespace>TestingCRUD.Test</RootNamespace>
+	<AssemblyName>TestingCRUD.Test</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TestingCRUD.Aplication\TestingCRUD.Application.csproj" />
-    <ProjectReference Include="..\..\src\TestingCRUD.Domain\TestingCRUD.Domain.csproj" />
+    <ProjectReference Include="..\..\src\TestingCRUD.Aplication\SalesManagement.Application.csproj" />
+    <ProjectReference Include="..\..\src\TestingCRUD.Domain\SalesManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
