--- a/src/TestingCRUD.Infra/SalesManagement.Infra.csproj
+++ b/src/TestingCRUD.Infra/SalesManagement.Infra.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<RootNamespace>TestingCRUD.Infra</RootNamespace>
+	<AssemblyName>TestingCRUD.Infra</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestingCRUD.Aplication\TestingCRUD.Application.csproj" />
-    <ProjectReference Include="..\TestingCRUD.Domain\TestingCRUD.Domain.csproj" />
+    <ProjectReference Include="..\TestingCRUD.Aplication\SalesManagement.Application.csproj" />
+    <ProjectReference Include="..\TestingCRUD.Domain\SalesManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
