--- a/src/TestingCRUD.API/appsettings.Development.json
+++ b/src/TestingCRUD.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServerConnectionString": "Server=sales-sqlserver;Database=SalesManagement;User=sa;Password=SalesManagement123;TrustServerCertificate=True;"
   }
 }
